Add code-style/testing rules; fix Java 21 API on Java 17 target
Document the requested rules in .claude/rules:
- code-style: no var (explicit types), avoid plain for loops unless
  cheaper, avoid long call chains, blank line after an opening brace
- testing: given/when/then structure and method_whatItDoes_result naming

Also fix a build break: List.getFirst()/getLast() (Java 21
SequencedCollection) were used while the module targets Java 17, so the
project did not compile. Replaced with get(0) / get(size()-1).